# urirun-connector-ksef

./: CHANGELOG.md  Makefile  README.md  TODO.md  local.dev.txt  pyproject.toml
.github/workflows/: ci.yml  integration-urirun-llm.yml
examples/: README.md  send-invoice.sh
scripts/: ci_urirun_llm_smoke.py
tests/: test_auth.py  test_contract.py  test_crypto.py  test_routes.py  test_tag.py  test_xades.py
urirun_connector_ksef/: __init__.py  auth.py  cli.py  connector.manifest.json  contracts.json  core.py  crypto.py  xades.py
