[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "urirun-connector-ksef"
version = "0.1.0"
description = "KSeF 2.0 (Polish national e-invoicing) connector for ifuri and urirun"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "if-uri" }]
dependencies = [
  "urirun>=0.4.14",
  "cryptography>=42",
]

[project.optional-dependencies]
test = ["pytest>=8"]

[project.scripts]
urirun-connector-ksef = "urirun_connector_ksef.cli:main"

[project.entry-points."urirun.bindings"]
ksef = "urirun_connector_ksef:urirun_bindings"

[tool.setuptools.packages.find]
where = ["."]
include = ["urirun_connector_ksef*"]

[tool.setuptools.package-data]
urirun_connector_ksef = ["connector.manifest.json"]
